--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
 
-    if (i % 2 == 0) {
-        str += '#';
-    } else {
-        str += ' ';
-    }
-
+  <button onclick="showCircle(150, 150, 100, )">showCircle(150, 150, 100)</button>
   <script src="test.js">
 
   </script>
+  <script>console.log(a)</script>
 
 </body>
 </html>
