--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 </head>
 
 <body>
+  
+  <input type="checkbox">
+   <input type="range">
+
+
 
 
   <script src="test.js">
-
   </script>
-
-
 </body>
 </html>
