--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,13 +8,9 @@
 </head>
 
 <body>
-  
-  <input type="checkbox">
-   <input type="range">
 
-
-
-
+	<div class="container"></div>
+	
   <script src="test.js">
   </script>
 </body>
